// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`details > renders as div version 1`] = `
<DocumentFragment>
  <details
    class="details"
  >
    <summary
      class="details__summary"
    >
      <span
        class="details__label"
      >
        Details
      </span>
      <span
        class="details__icon"
        hidden=""
      >
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-0"
            viewBox="0 0 16 16"
          >
            <path
              d="M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"
            />
          </symbol>
          <use
            href="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </summary>
    <div
      class="details__content"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </details>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.b=[0,1,{content:_._["src/tags/evo-details/examples/default.marko_1_renderer"](_.a={}),htmlInput:{}},3,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",6,"src/tags/evo-details/index.marko_0_htmlInput",2];M._.w()
  </script>
</DocumentFragment>
`;

exports[`details > renders basic version 1`] = `
<DocumentFragment>
  <details
    class="details"
  >
    <summary
      class="details__summary"
    >
      <span
        class="details__label"
      >
        Details
      </span>
      <span
        class="details__icon"
        hidden=""
      >
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-0"
            viewBox="0 0 16 16"
          >
            <path
              d="M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"
            />
          </symbol>
          <use
            href="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </summary>
    <div
      class="details__content"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </details>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.b=[0,1,{content:_._["src/tags/evo-details/examples/default.marko_1_renderer"](_.a={}),htmlInput:{}},3,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",6,"src/tags/evo-details/index.marko_0_htmlInput",2];M._.w()
  </script>
</DocumentFragment>
`;

exports[`details > renders center version 1`] = `
<DocumentFragment>
  <details
    class="details"
  >
    <summary
      class="details__summary details__summary--center"
    >
      <span
        class="details__label"
      >
        Details
      </span>
      <span
        class="details__icon"
        hidden=""
      >
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-0"
            viewBox="0 0 16 16"
          >
            <path
              d="M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"
            />
          </symbol>
          <use
            href="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </summary>
    <div
      class="details__content"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </details>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.b=[0,1,{content:_._["src/tags/evo-details/examples/default.marko_1_renderer"](_.a={}),htmlInput:{}},3,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",6,"src/tags/evo-details/index.marko_0_htmlInput",2];M._.w()
  </script>
</DocumentFragment>
`;

exports[`details > renders in open state 1`] = `
<DocumentFragment>
  <details
    class="details"
    open=""
  >
    <summary
      class="details__summary"
    >
      <span
        class="details__label"
      >
        Details
      </span>
      <span
        class="details__icon"
        hidden=""
      >
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-0"
            viewBox="0 0 16 16"
          >
            <path
              d="M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"
            />
          </symbol>
          <use
            href="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </summary>
    <div
      class="details__content"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </details>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.b=[0,1,{content:_._["src/tags/evo-details/examples/default.marko_1_renderer"](_.a={}),htmlInput:{open:!0}},3,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",6,"src/tags/evo-details/index.marko_0_htmlInput",2];M._.w()
  </script>
</DocumentFragment>
`;

exports[`details > renders small version 1`] = `
<DocumentFragment>
  <details
    class="details"
  >
    <summary
      class="details__summary details__summary--small"
    >
      <span
        class="details__label"
      >
        Details
      </span>
      <span
        class="details__icon"
        hidden=""
      >
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-0"
            viewBox="0 0 16 16"
          >
            <path
              d="M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"
            />
          </symbol>
          <use
            href="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </summary>
    <div
      class="details__content"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </details>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.b=[0,1,{content:_._["src/tags/evo-details/examples/default.marko_1_renderer"](_.a={}),htmlInput:{}},3,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",6,"src/tags/evo-details/index.marko_0_htmlInput",2];M._.w()
  </script>
</DocumentFragment>
`;
